# StarTap-Icon-Converter

./: .gitignore  Cargo.toml  README.md  README_Nuitka.md  app.manifest  build.rs  build_pro.ps1  generate_icon_v2.py  mcp.toml  resources.rc  图片转icns_mac.py  图片转ico透明.py
docs/internal/: zhihu_article.md
png 图标转 icns.app/Contents/: Info.plist
src/: main.rs
